--- a/.github/workflows/playwright-allure.yml
+++ b/.github/workflows/playwright-allure.yml
@@ -23,9 +23,16 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
+      - name: Clean allure-results folder
+        run: rm -rf allure-results || true
+
       - name: Run Playwright tests (generate Allure results)
         run: npx playwright test
         continue-on-error: true
+
+      - name: List allure-results
+        if: always()
+        run: ls -la allure-results/ || echo "No allure-results found"
 
       - name: Generate Allure report
         if: always()
